After opening a native context menu in tab content, the first click in the browser chrome is ignored (and mouseover effects don't work)
Categories
(Core :: Widget: Cocoa, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox89 | --- | verified |
People
(Reporter: mstange, Assigned: mstange)
References
Details
(Whiteboard: [proton-context-menus][mac:mr1])
Attachments
(1 file)
Steps to reproduce:
- Be on macOS, and set
widget.macos.native-context-menus
andbrowser.proton.contextmenus.enabled
to true. - Right click somewhere on this page to open a content area context menu.
- Dismiss the menu by clicking somewhere else on this page, outside the menu.
- Move your mouse over a toolbar button in the toolbar at the top.
- Click a toolbar button, for example the hamburger button.
Expected results:
In step 4, hover effects should work. In step 5, the click should work.
Actual results:
Neither hover effects nor the click work. But once you've clicked somewhere, they start to work again.
Hover effects and clicks inside tab content still work.
This bug does not happen if the right click in step 2 happens in the chrome, or if the menu is dismissed by clicking a draggable part of the window in step 3.
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
This is copied from the nsMenuPopupFrame::ShowPopup just a few lines below.
The native menu consumes mouseup events so we need to clear :active and capturing content just before opening the menu.
Comment 3•4 years ago
|
||
bugherder |
Comment 4•4 years ago
|
||
Reproduced the issue mentioned in comment 0 using a Firefox 89.0a1 build from 2021-03-24.
This issue is verified fixed using Firefox 89.0a1 (BuildId:20210414160838) on macOS 10.15 with native menus enabled.
Updated•4 years ago
|
Description
•