Bug 1700706 - Clear active and capturing content before opening native menus. r=tnikkel

This is copied from the nsMenuPopupFrame::ShowPopup just a few lines below.
The native menu consumes mouseup events so we need to clear :active and capturing content just before opening the menu.

Differential Revision: https://phabricator.services.mozilla.com/D109672