layout/xul/nsMenuPopupFrame.cpp
@@ -958,6 +958,17 @@ void nsMenuPopupFrame::InitializePopupAtRect(nsIContent* aTriggerContent,
 
 void nsMenuPopupFrame::ShowNativeMenu() {
   MOZ_RELEASE_ASSERT(mNativeMenu);
+
+  // While the native menu is open, it consumes mouseup events.
+  // Clear any :active state and mouse capture now so that we don't get stuck in
+  // that state.
+  EventStateManager* activeESM = static_cast<EventStateManager*>(
+      EventStateManager::GetActiveEventStateManager());
+  if (activeESM) {
+    EventStateManager::ClearGlobalActiveContent(activeESM);
+  }
+  PresShell::ReleaseCapturingContent();
+
   bool succeeded = mNativeMenu->ShowAsContextMenu(
       DesktopPoint::FromUnknownPoint(mScreenRect.TopLeft()));
   if (!succeeded) {
